--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       const [showStats, setShowStats] = useState(false);
       const [showCalendar, setShowCalendar] = useState(false);
       const [showPizzaReview, setShowPizzaReview] = useState(false);
-      const [showCompleted, setShowCompleted] = useState(true);
+      const [showCompleted, setShowCompleted] = useState(false);
       const [showInbox, setShowInbox] = useState(true);
       const [showToday, setShowToday] = useState(true);
       const [showThisWeek, setShowThisWeek] = useState(true);
