--- a/index.html
+++ b/index.html
@@ -1160,8 +1160,8 @@
               <h1 className="text-4xl font-bold mb-8 tracking-tight flex items-center gap-3" style={{ color: '#10122F' }}>
                 ✨ Moje úlohy
                 {isSaving && (
-                  <span className="text-sm font-normal px-3 py-1 rounded-full animate-pulse" style={{ backgroundColor: '#e9eeff', color: '#5176FB' }}>
-                    💾 Ukladám...
+                  <span className="text-2xl animate-pulse">
+                    💾
                   </span>
                 )}
               </h1>
